--- a/_extensions/hubchev/apaquarto/apatemplate.tex
+++ b/_extensions/hubchev/apaquarto/apatemplate.tex
@@ -221,15 +221,15 @@ $endif$
 \thispagestyle{empty}
 \hfill \includegraphics[width=20cm]{logo.png}\\
 {\centering
-  {\large Charlotte Fresenius Hochschule\\
-Studiengang: Psychologie (B. Sc.)\\
-Studienort: $place$  \par
+  {\large $university$\\
+$studiengang$\\
+ $place$  \par
 }
   \hbox{}\vskip 0cm plus 1fill
   {\Large \bfseries $subtitle$ \par}
   $if(subtitle)$
     \vspace{3ex}
-  {\Large \bfseries $title$ \par}
+  {\Large \bfseries $title$ \\ $title-secondline$ \par}
   $endif$
     \vfill
   $for(by-author)$
