--- a/temp_apa_de.qmd
+++ b/temp_apa_de.qmd
@@ -1,18 +1,23 @@
 ---
-title: "Titel der Hausarbeit XXX"
-subtitle: "Hausarbeit im Modul XXX"
-gutachter: "Prof. Dr. XXX XXX"
+title: "XXX Titel der Hausarbeit: XXX"
+title-secondline: "XXX wenn der Titel nicht in eine Zeile passt XXX"
+subtitle: "XXX Hausarbeit im Modul XXX"
+shorttitle: "XXX Der Laufende Titel XXX"
 
+university: "Charlotte Fresenius Hochschule"
+studiengang: "Studiengang: Psychologie (B. Sc.)"
+place: "Studienort: Köln"
+
+gutachter: "Prof. Dr. XXX XXX"
 date: 07/13/2024
 date-format: "DD.MM.YYYY"
-place: "Köln"
 
 author:
   - name: "XXX XXX (Matr. Nr.: XXX)"
     corresponding: false
     affiliations:
-      city: Los Angeles
-      region: CA
+      city: Köln
+      region: NRW
 semester-eins: "XXX. Fachsemester"
 author-zwei: ""
 semester-zwei: ""
@@ -24,37 +29,27 @@ format:
   apaquarto-pdf:
     documentmode: stu
 toc: true
+keep-tex: true
 floatsintext: true
-number-sections: true
+number-sections: false
 a4paper: true
 fontsize: 12pt
 lang: de
-language: 
-  citation-last-author-separator: "und"
-  figure-table-note: "Anmerkung"
-  section-title-abstract: "Zusammenfassung"
-  section-title-appendix: "Anhang"
-  section-title-references: "Literaturverzeichnis"
 ---
 
 # Zusammenfassung {.unnumbered}
 
-Diese Vorlage wurde von Prof. Dr. Stephan **Huber** angefertigt. Sie baut auf Quarto extension `apaquarto` auf [@Schneider2024quarto].
+\noindent 
+Diese Vorlage wurde von Prof. Dr. Stephan **Huber** angefertigt. Sie baut auf die von von @Schneider2024quarto erstellte Quarto Extension `apaquarto` auf. Genauere Erläuterungen und Verwendungsbeispiele sind in der PDF "roadshow_apa_de.pdf" zu finden.
 
 \newpage
+\thispagestyle{empty}
+\tableofcontents
 
-
+\newpage
 # Einleitung
 
-sdgfkshglj *sgfsdg* sgsg sdgsd[^1].
-
-[^1]: Hierwer
-
-sdfs sfESFD[@DerlingJoséMendozaVelazco2023].
-
--   sdg
--   **sgfs**
--   woireire
+Text
 
 # Theoretischer Hintergrund
 
@@ -81,11 +76,14 @@ Text
 ::: {#refs}
 :::
 
+\newpage
 \appendix
 
+# Titel des ersten Anhangs 
 
-## Anhang A: Text
+XXX Text XXX
 
-## Anhang B: Text
+# Titel des zweiten Anhangs 
 
+XXX Text XXX
 
