fixed miss-counting at tables

--- a/_extensions/hubchev/apaquarto/apatemplate.tex
+++ b/_extensions/hubchev/apaquarto/apatemplate.tex
@@ -2,6 +2,9 @@ $doc-class.tex()$
 \usepackage{amsmath}
 \usepackage{amssymb}
 
+\usepackage[globalsuspend=true]{assoccnt}
+\SuspendCounters{table}
+
 $if(docmode)$
 \geometry{inner=1in, outer=1in}
 \fancyhfoffset[LE,RO]{0cm}
