--- a/roadshow_apa_de.qmd
+++ b/roadshow_apa_de.qmd
@@ -31,6 +31,7 @@ fontsize: 12pt
 indent-skip-first: false
 indent-skip-all: false
 lang: de
+# Das Logo lässt sich verändern und austauschen. Siehe Zeile 255 der Datei  _extensions/hubchev/apaquarto/apatemplate.tex
 ---
   
   
